--- a/styles/style.css
+++ b/styles/style.css
@@ -693,22 +693,7 @@ p {
 .navbar-custom{
   height: 80px !important;
 }
-.stCoBtn {
-  z-index: 10 !important;
-  top: 12rem !important;
-  align-items: center;
-  background-color: #ffffff!important;
-  border-radius: 50px;
-  bottom: 2rem;
-  box-shadow: 0 4px 12px 0 rgb(0 0 0 / 15%);
-  display: grid!important;
-  height: 180px;
-  position: fixed;
-  right: 1rem;
-  user-select: none;
-  width: 60px;
-  box-shadow:  1px 1px 15px 1px #0e0d0d;
-}
+
 .floatemail {
   z-index: 10 !important;
   top: 13rem!important;
@@ -773,14 +758,7 @@ floatemail {
 }
 
 
-.styles-module_whatsappButton__IWx9V {
-  z-index: 10 !important;
-  top: 19.5rem !important;
-  right: 23px!important;
-  width: 45px!important;
-  height: 45px!important;
-  
-}
+
 .cursor-home-shop{
   cursor: pointer; 
   transform: scale(1);
@@ -825,14 +803,7 @@ floatemail {
   border-radius: 60%;
   border: 3px solid #336ce8;
 }
-.styles-module_whatsappButton__IWx9V {
-  z-index: 10 !important;
-  top: 19.5rem !important;
-  right: 23px!important;
-  width: 45px!important;
-  height: 45px!important;
-  
-}
+
 .cursor-home-shop{
   cursor: pointer; 
   transform: scale(1);
@@ -966,4 +937,103 @@ floatemail {
 }
 .close-collopse{
   display: none !important;
+}
+.stCoBtn {
+  z-index:999999 !important;
+  top: 12rem !important;
+  align-items: center;
+  background-color: #2d2d2d!important;
+  bottom: 2rem;
+ 
+  display: grid!important;
+  height: 9.5rem;
+  position: fixed;
+  right: 0rem;
+  user-select: none;
+  width: 2.8rem;
+  
+}
+.footerdisDes{
+  display: block!important;
+}
+.floatPhoneDes {
+  z-index: 10 !important;
+  top: 15rem!important;
+  align-items: center;
+  bottom: 2rem;
+  border-bottom: 2px solid rgb(255, 255, 255);
+  box-shadow: 0 4px 12px 0 rgb(0 0 0 / 15%);
+  cursor: pointer;
+  display: grid !important;
+  height: 45px;
+  justify-content: center;
+  position: fixed;
+  right: 0rem;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  width: 45px;
+}
+.floatEmaillDes {
+  z-index: 10 !important;
+  top: 12rem!important;
+  align-items: center;
+  border-bottom: 2px solid rgb(255, 255, 255);
+  bottom: 2rem;
+  box-shadow: 0 4px 12px 0 rgb(0 0 0 / 15%);
+  cursor: pointer;
+  display: grid !important;
+  height: 45px;
+  justify-content: center;
+  position: fixed;
+  right: 0rem;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  width: 45px;
+
+}
+.stCoBtnMo{
+  z-index: 10 !important;
+  bottom: 0px;
+  align-items: center;
+  background-color: #252826!important;
+  margin: 0;
+  box-shadow: 0 4px 12px 0 rgb(0 0 0 / 15%);
+  display: grid!important;
+  height: 6%;
+  position: fixed;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  width: 100%;
+  box-shadow: 1px 1px 15px 1px #0e0d0d;
+}
+.footerdisMo {
+  display: none!important;
+}
+@media only screen and (max-width: 786px) {
+  .footerdisMo {
+    display: block!important;
+  }
+  .footerdisDes{
+    display: none!important;
+  }
+}
+.floatemailMobil {
+  z-index: 10 !important;
+  bottom: 1rem;
+  cursor: pointer;
+  position: fixed;
+  right: 2rem;
+}
+.floatingbuttonnnnMobil {
+  z-index: 10 !important;
+  bottom: 1rem;
+  cursor: pointer;
+  position: fixed;
+  left: 2rem;
 }
