--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,7 +3,7 @@ body {
   padding: 0 !important;
   margin: 0 !important;
   font-family: 'Montserrat', sans-serif !important;
- margin-top: 104px !important;
+ margin-top: 110px !important;
 }
 html{
   min-width: 100% !important;
@@ -111,4 +111,7 @@ margin-bottom: 0;
 }
  li{
 list-style: none !important;
+}
+.mt-10{
+margin-top: 150px !important;
 }
